--- a/.github/workflows/sync-data-to-r2.yml
+++ b/.github/workflows/sync-data-to-r2.yml
@@ -2,32 +2,30 @@ name: Sync Data to R2
 
 on:
   push:
-    branches: [main]
-    paths: ['data/**']
-  workflow_dispatch:
+    paths:
+      - "data/**"   # only run when files in data folder change
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup rclone
+
+      - name: Install rclone
         run: |
           curl https://rclone.org/install.sh | sudo bash
-          
-      - name: Configure rclone for R2
+
+      - name: Configure rclone
         run: |
           mkdir -p ~/.config/rclone
-          cat << EOF > ~/.config/rclone/rclone.conf
+          cat <<EOF > ~/.config/rclone/rclone.conf
           [r2]
           type = s3
           provider = Cloudflare
-          access_key_id = ${{ secrets.CLOUDFLARE_R2_ACCESS_KEY }}
-          secret_access_key = ${{ secrets.CLOUDFLARE_R2_SECRET_KEY }}
-          endpoint = https://${{ secrets.CLOUDFLARE_ACCOUNT_ID }}.r2.cloudflarestorage.com
+          access_key_id = ${{ secrets.R2_ACCESS_KEY_ID }}
+          secret_access_key = ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          endpoint = https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com
           EOF
-          
-      - name: Sync data to R2
-        run: |
-          rclone sync data/ r2:${{ secrets.R2_BUCKET }}/data/ --progress
+
+      - name: Sync data folder to R2
+        run: rclone sync ./data r2:psyence --progress
