Add workflow dispatch inputs for folder synchronization in GitHub Actions

--- a/.github/workflows/sync-data-to-r2.yml
+++ b/.github/workflows/sync-data-to-r2.yml
@@ -4,6 +4,12 @@ on:
   push:
     paths:
       - "data/**"   # only run when files in data folder change
+  workflow_dispatch:
+    inputs:
+      folder:
+        description: 'Folder to sync'
+        required: true
+        default: 'data/'
 
 jobs:
   sync:
