--- a/.github/workflows/sync-data-to-r2.yml
+++ b/.github/workflows/sync-data-to-r2.yml
@@ -3,23 +3,24 @@ name: Sync Data to R2
 on:
   push:
     paths:
-      - "data/**"   # only run when files in data folder change
+      - "data/**"   # Runs only when files in data folder change
   workflow_dispatch:
     inputs:
       folder:
-        description: 'Folder to sync'
+        description: "Folder to sync"
         required: true
-        default: 'data/'
+        default: "data/"
 
 jobs:
   sync:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Install rclone
-        run: |
-          curl https://rclone.org/install.sh | sudo bash
+        run: curl https://rclone.org/install.sh | sudo bash
 
       - name: Configure rclone
         run: |
@@ -33,5 +34,9 @@ jobs:
           endpoint = https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com
           EOF
 
-      - name: Sync data folder to R2
-        run: rclone sync ./data r2:psyence --progress
+      - name: Sync to Cloudflare R2
+        run: |
+          rclone sync \
+            "${{ github.event.inputs.folder || 'data/' }}" \
+            r2:psyence \
+            --progress
