--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@ai-sdk/openai": "^2.0.23",
 		"@opennextjs/cloudflare": "^1.6.5",
+		"@stackframe/stack": "^2.8.35",
+		"ai": "^5.0.28",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.542.0",
 		"next": "15.4.6",
 		"react": "19.1.0",
-		"react-dom": "19.1.0"
+		"react-dom": "19.1.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -26,6 +33,7 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.4.6",
 		"tailwindcss": "^4",
+		"tw-animate-css": "^1.3.7",
 		"typescript": "^5",
 		"wrangler": "^4.33.1"
 	}
