--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@ai-sdk/openai": "^2.0.23",
+		"@ai-sdk/react": "^2.0.28",
 		"@opennextjs/cloudflare": "^1.6.5",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-collapsible": "^1.1.12",
